# marchverify

./: Anchor.toml  README.md
programs/marchverify/: Cargo.toml
programs/marchverify/src/: lib.rs
programs/marchverify/src/instructions/: initialize.rs
tests/: marchverify.ts
