[package]
name = "marchverify"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "marchverify"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "metadata", "associated_token"] }
ephemeral-vrf-sdk = {version = "0.1.2", features = ["anchor"]}
solana-security-txt = "1.1.2"
indexmap = "=2.2.6"
solana-program="2.3.0"
constant_time_eq = "=0.3.1"

